# GameOfLife

./: .gitignore  CMakeLists.txt  README.md  setup_sfml.bat
src/: Cell.hpp  Game.cpp  Game.hpp  main.cpp
